--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
 <h3>홈 페이지</h3>
-<p><span class="username">홍길동</span>님~~ 안녕하세요.</p>
+<p><span class="username">김철수</span>님~~ 반갑습니다.</p>
 </body>
 </html>
